14.5/manifests/11-pod1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pod1
  name: pod1
  namespace: 14-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod1
  template:
    metadata:
      labels:
        app: pod1
    spec:
      containers:
        - image: praqma/network-multitool:alpine-extra
          imagePullPolicy: IfNotPresent
          name: network-multitool
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: pod1
  namespace: 14-5
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: pod1
