14.5/manifests/12-pod2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pod2
  name: pod2
  namespace: 14-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod2
  template:
    metadata:
      labels:
        app: pod2
    spec:
      containers:
        - image: praqma/network-multitool:alpine-extra
          imagePullPolicy: IfNotPresent
          name: network-multitool
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: pod2
  namespace: 14-5
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: pod2
