14.5/manifests/20-np-default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: 14-5
spec:
  podSelector: {}
  policyTypes:
    - Ingress
